--- a/css/style.css
+++ b/css/style.css
@@ -721,6 +721,117 @@ main {
     color: #2e3192;
     letter-spacing: 0.3px; }
 
+.stakeholders {
+  padding: 7rem 0;
+  position: relative; }
+  @media only screen and (max-width: 768px) {
+    .stakeholders {
+      overflow-x: hidden; } }
+  .stakeholders::before {
+    content: "";
+    background-image: url(../images/bg-07.jpg);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: repeat;
+    background-attachment: fixed;
+    opacity: 0.3; }
+    @media only screen and (max-width: 768px) {
+      .stakeholders::before {
+        content: none; } }
+  .stakeholders .container {
+    position: relative; }
+  @media only screen and (max-width: 992px) {
+    .stakeholders {
+      padding: 5rem 0; } }
+  @media only screen and (max-width: 768px) {
+    .stakeholders {
+      padding: 3rem 0; } }
+  @media only screen and (min-width: 768.1px) {
+    .stakeholders {
+      background-image: linear-gradient(90deg, #000 50%, #ffffff 50%); } }
+  @media only screen and (min-width: 768.1px) {
+    .stakeholders .col-md-6:last-child {
+      padding-left: 2rem; } }
+  @media only screen and (max-width: 768px) {
+    .stakeholders .col-md-6:first-child {
+      background: #2e3192;
+      padding-top: 3rem;
+      padding-bottom: 3rem;
+      position: relative;
+      margin-bottom: 3rem; }
+      .stakeholders .col-md-6:first-child::before, .stakeholders .col-md-6:first-child::after {
+        content: "";
+        background: #2e3192;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%; }
+      .stakeholders .col-md-6:first-child::before {
+        left: -99%; }
+      .stakeholders .col-md-6:first-child::after {
+        right: -99%; } }
+  @media only screen and (min-width: 768.1px) {
+    .stakeholders .col-md-6:first-child {
+      padding-right: 1rem; } }
+  @media only screen and (min-width: 768.1px) {
+    .stakeholders h2 {
+      text-align: left; } }
+  .stakeholders ul {
+    margin-top: 3rem;
+    padding-left: 0; }
+    .stakeholders ul li {
+      background: white;
+      padding: 12.5px;
+      border-radius: 60px;
+      width: 100%;
+      text-align: center;
+      font-weight: 700;
+      color: #2e3192;
+      border: 2px solid white;
+      transition: 0.4s ease; }
+      .stakeholders ul li:hover {
+        background: transparent;
+        color: white; }
+      @media only screen and (min-width: 992.1px) {
+        .stakeholders ul li {
+          font-size: 2.6rem;
+          width: calc(100% - 5rem); } }
+      .stakeholders ul li:not(:last-child) {
+        margin-bottom: 1.5rem; }
+  .stakeholders .quality-grid {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    border: 2px solid #2e3192;
+    margin-bottom: 5rem; }
+    .stakeholders .quality-grid .quality-grid-item:nth-child(1) {
+      flex: 0 0 12rem;
+      max-width: 12rem; }
+      .stakeholders .quality-grid .quality-grid-item:nth-child(1) img {
+        outline: 2px solid #c4272d; }
+    .stakeholders .quality-grid .quality-grid-item:last-child {
+      max-width: calc(100% - 12rem);
+      flex: calc(100% - 12rem);
+      padding-left: 2rem; }
+  .stakeholders .img-wrapper {
+    border-radius: 100%;
+    aspect-ratio: 1;
+    margin: auto; }
+    @media only screen and (min-width: 992.1px) {
+      .stakeholders .img-wrapper {
+        width: 37rem; } }
+    @media screen and (min-width: 768px) and (max-width: 991.9px) {
+      .stakeholders .img-wrapper {
+        width: 24rem;
+        margin: auto; } }
+    @media only screen and (max-width: 768px) {
+      .stakeholders .img-wrapper {
+        width: 20rem; } }
+
 .world-largest-school {
   background: #9e9e9e;
   position: relative;
